--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,10 +1,10 @@
 .nav {
-  display: table;
   width: 100%;
   height: 50px;
-  background: #fff000;
-  margin-bottom: 0;
-  padding-left: 0; }
+  line-height: 50px;
+  background: #333333;
+  -webkit-box-shadow: 0px 0px 10px #999999;
+  box-shadow: 0px 0px 10px #999999; }
   .nav:before, .nav:after {
     content: "";
     display: table; }
@@ -14,19 +14,27 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background: #cccccc;
-    height: 50px;
-    width: 970px; }
-  .nav .logo {
-    float: left; }
+    height: 50px; }
+  .nav a {
+    color: #fff; }
+  .nav .search {
+    margin-left: 50px;
+    border: 1px solid #ddd;
+    height: 10px;
+    line-height: 20px;
+    padding: 5px 10px; }
   .nav li {
     position: relative; }
     .nav li > a {
-      color: #111111; }
+      color: white; }
       .nav li > a:hover, .nav li > a:focus {
         text-decoration: none; }
   .nav .menu > li {
-    width: 120px;
-    margin-right: 30px;
+    width: 60px;
     float: left;
     text-align: center; }
+
+footer {
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px dashed #ddd; }
