--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -1,30 +1,30 @@
 @import 'functions';
 
 $nav-height:50px;
-$nav-bg:#fff000;
-$nav-container-width:970px;
 $nav-container-height:50px;
-$nav-container-bg:#ccc;
-$menu-margin:30px;
-$menu-width:120px;
-$nav-link-color:#111;
+$menu-width:60px;
+$nav-link-color:#fff;
 
 .nav{
-    display:table;
     width:100%;
     height:$nav-height;
-    background:$nav-bg;
-    margin-bottom:0;
-    padding-left:0;
+    line-height:$nav-height;
+    background:$global-color;
     @include clearfix();
+    @include box-shadow(0px 0px 10px #999);
     .nav-container{
         @include center-block(); 
-        background:$nav-container-bg;
         height:$nav-container-height;
-        width:$nav-container-width;
     }
-    .logo{
-        float:left;
+    a{
+        color:#fff; 
+    }
+    .search{
+        margin-left:50px; 
+        border:1px solid #ddd;
+        height:10px;
+        line-height:20px;
+        padding:5px 10px;
     }
     li{
         position:relative; 
@@ -39,9 +39,15 @@ $nav-link-color:#111;
     .menu{
         >li{
             width:$menu-width;
-            margin-right:$menu-margin;
             float:left;
             text-align:center;
         }
     }
+}
+
+
+footer{
+    margin-top:20px;
+    padding-top:20px;
+    border-top:1px dashed #ddd;
 }
