--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,8 +1,6 @@
 @import "functions.scss";
 @import "animate.scss";
 
-footer{
-    margin-top:20px;
-    padding-top:20px;
-    border-top:1px dashed #ddd;
+.main{
+
 }
