--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 50px;
   line-height: 50px;
-  background: #333333;
+  background: #fff;
   -webkit-box-shadow: 0px 0px 10px #999999;
   box-shadow: 0px 0px 10px #999999; }
   .nav:before, .nav:after {
@@ -14,27 +14,65 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 50px; }
+    height: 50px;
+    padding: 0 10px; }
   .nav a {
-    color: #fff; }
-  .nav .search {
-    margin-left: 50px;
-    border: 1px solid #ddd;
-    height: 10px;
-    line-height: 20px;
-    padding: 5px 10px; }
-  .nav li {
-    position: relative; }
-    .nav li > a {
-      color: white; }
-      .nav li > a:hover, .nav li > a:focus {
-        text-decoration: none; }
+    color: red; }
+  .nav .search-form {
+    width: 250px;
+    margin-left: 50px; }
+    .nav .search-form .search {
+      display: inline-block;
+      width: 60%;
+      border: 1px solid #ddd;
+      height: 20px;
+      padding: 5px;
+      font-size: 16px;
+      font-weight: bold;
+      vertical-align: middle; }
+    .nav .search-form button {
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 20px;
+      height: 30px;
+      line-height: 30px;
+      padding: 0 10px;
+      color: #fff;
+      border: none;
+      background: red;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+      border-radius: 3px; }
   .nav .menu > li {
-    width: 60px;
+    height: 30px;
+    margin: 10px;
+    line-height: 30px;
+    border: 1px solid red;
+    width: 50px;
     float: left;
-    text-align: center; }
+    text-align: center;
+    vertical-align: middle;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px; }
+    .nav .menu > li a {
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+      border-radius: 3px;
+      width: 50px;
+      display: inline-block; }
+      .nav .menu > li a:hover {
+        background: red;
+        color: #fff;
+        text-decoration: none; }
 
 footer {
-  margin-top: 20px;
-  padding-top: 20px;
+  margin-top: 30px;
+  padding: 30px;
   border-top: 1px dashed #ddd; }
