--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -2,52 +2,78 @@
 
 $nav-height:50px;
 $nav-container-height:50px;
-$menu-width:60px;
-$nav-link-color:#fff;
+$menu-width:30px;
+$nav-link-color:$global-color;
 
 .nav{
     width:100%;
     height:$nav-height;
     line-height:$nav-height;
-    background:$global-color;
+    background:#fff;
     @include clearfix();
     @include box-shadow(0px 0px 10px #999);
     .nav-container{
         @include center-block(); 
         height:$nav-container-height;
+        padding:0 10px;
     }
     a{
-        color:#fff; 
+        color:$global-color; 
     }
-    .search{
-        margin-left:50px; 
-        border:1px solid #ddd;
-        height:10px;
-        line-height:20px;
-        padding:5px 10px;
-    }
-    li{
-        position:relative; 
-        >a{
-            color:$nav-link-color; 
-            &:hover,&:focus{
-                text-decoration:none; 
-            }
+    .search-form{
+        width:250px;
+        margin-left:50px;
+        .search{
+            display:inline-block;
+            width:60%;
+            border:1px solid #ddd;
+            height:20px;
+            padding:5px;
+            font-size:16px;
+            font-weight:bold;
+            vertical-align:middle;
         }
-
+        button{
+            display:inline-block;
+            vertical-align:middle;
+            margin-left:20px;
+            height:30px;
+            line-height:30px;
+            padding:0 10px;
+            color:#fff;
+            border:none;
+            background:$global-color;
+            @include border-radius(3px);
+        }
     }
     .menu{
         >li{
-            width:$menu-width;
+            height:30px;
+            margin:10px;
+            line-height:30px;
+            border:1px solid $global-color;
+            width:50px;
             float:left;
             text-align:center;
+            vertical-align:middle;
+            @include border-radius(3px);
+            a{
+                @include border-radius(3px);
+                width:50px;
+                display:inline-block; 
+                &:hover{
+                    background:$global-color;
+                    color:#fff;
+                    text-decoration:none; 
+                }
+            }
         }
     }
 }
 
 
 footer{
-    margin-top:20px;
-    padding-top:20px;
+    margin-top:30px;
+    padding:30px;
     border-top:1px dashed #ddd;
 }
