--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,25 +1,9 @@
 //font
 //-----------------------
 $font:12px/1.5 tahoma,arial,'Hiragino Sans GB',\5b8b\4f53,sans-serif;
-$font12:12px;
-$font14:14px;
-$font16:16px;
-$font18:18px;
-$font20:20px;
-$font22:22px;
-$font24:24px;
-
 //colors
 //-----------------------
-$gray-1:#111;
-$gray-3:#333;
-$gray-6:#666;
-$gray-9:#999;
 
-$gray-c:#ccc;
-$gray-d:#ddd;
-
-//body background
 //-----------------------
 $body-bg:#fff;
 
@@ -28,9 +12,9 @@ $body-bg:#fff;
 $link-color:blue;
 $link-hover-color:red;
 
-
 //form
 $input-color-placeholder:#ddd;
 
+$global-color:#ff0000;
 
-$global-color:#333;
+$border-color:#f0f0f0;
