--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,8 @@
     clear: both; }
 
 .reg-form, .login-form {
-  width: 44%;
-  margin-left: 33%; }
+  width: 60%;
+  margin-left: 30%; }
   .reg-form .row, .login-form .row {
     margin: 50px 0px; }
   .reg-form input[type="text"], .reg-form input[type="password"], .login-form input[type="text"], .login-form input[type="password"] {
@@ -30,17 +30,18 @@
   .reg-form label, .login-form label {
     width: 50px; }
   .reg-form span.tips, .login-form span.tips {
-    color: red; }
-  .reg-form .act, .login-form .act {
-    text-align: center; }
-    .reg-form .act button, .login-form .act button {
-      height: 50px;
-      padding: 0 30px;
-      border: none;
-      color: #fff;
-      background: red;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
-      -ms-border-radius: 3px;
-      -o-border-radius: 3px;
-      border-radius: 3px; }
+    color: red;
+    margin-left: 10px;
+    display: none; }
+  .reg-form .act button, .login-form .act button {
+    margin-left: 52px;
+    height: 50px;
+    padding: 0 30px;
+    border: none;
+    color: #fff;
+    background: red;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px; }
