fixbug and change font

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -51,12 +51,8 @@
 /*
 * settings
 */
-#show-avatar{
+#show-avatar,#current-avatar{
     width:64px;
     height:64px;
     @include border-radius(3px);
 }
-
-
-
-
