--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,5 +1,5 @@
 html {
-  font: 12px/1.5 tahoma, arial, "Hiragino Sans GB", \5b8b\4f53, sans-serif; }
+  font: 12px/1.5 "Microsoft Yahei"; }
 
 body {
   margin: 0;
