--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@
 /*
 * settings
 */
-#show-avatar {
+#show-avatar, #current-avatar {
   width: 64px;
   height: 64px;
   -webkit-border-radius: 3px;
