--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,6 +1,6 @@
 //font
 //-----------------------
-$font:12px/1.5 tahoma,arial,'Hiragino Sans GB',\5b8b\4f53,sans-serif;
+$font:12px/1.5 "Microsoft Yahei";
 //colors
 //-----------------------
 
