--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -71,13 +71,13 @@
         margin:10px 0;
     }
     #new-topic-title{
-        width:900px;
+        width:100%;
         height:40px;
         padding:0 15px;
         font-weight:bold;
     }
     #new-topic-content{
-        width:970px;
+        width:100%;
         height:300px;
         padding:15px;
     }
