--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,12 +75,12 @@
     border-radius: 3px;
     margin: 10px 0; }
   #new-topic #new-topic-title {
-    width: 900px;
+    width: 100%;
     height: 40px;
     padding: 0 15px;
     font-weight: bold; }
   #new-topic #new-topic-content {
-    width: 970px;
+    width: 100%;
     height: 300px;
     padding: 15px; }
   #new-topic button[type=submit] {
