--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -21,7 +21,7 @@ $nav-link-color:$global-color;
         color:$global-color; 
     }
     .search-form{
-        width:250px;
+        width:50%;
         margin-left:50px;
         .search{
             display:inline-block;
