--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-device-width: 320px) and (max-device-width: 768px) {
+@media screen and (max-device-width: 479px) {
   .nav .search-form {
     margin-left: 10px; }
     .nav .search-form button {
@@ -6,5 +6,5 @@
   .nav .menu > li {
     margin: 10px 3px; }
 
-  .main {
-    width: 400px; } }
+  .main .main-wrapper {
+    width: 320px; } }
