--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -459,12 +459,15 @@ textarea {
     margin-left: auto;
     margin-right: auto;
     height: 50px;
-    padding: 0 10px; }
+    padding: 0 2%;
+    position: relative; }
+    .nav .nav-container .logo {
+      float: left; }
   .nav a {
     color: #ed0000; }
   .nav .search-form {
     width: 50%;
-    margin-left: 50px; }
+    margin-left: 2%; }
     .nav .search-form .search {
       display: inline-block;
       width: 60%;
@@ -477,7 +480,7 @@ textarea {
     .nav .search-form button {
       display: inline-block;
       vertical-align: middle;
-      margin-left: 20px;
+      margin-left: 2%;
       height: 30px;
       line-height: 30px;
       padding: 0 10px;
@@ -489,37 +492,42 @@ textarea {
       -ms-border-radius: 3px;
       -o-border-radius: 3px;
       border-radius: 3px; }
-  .nav .menu > li {
-    height: 30px;
-    margin: 10px;
-    line-height: 30px;
-    float: left;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px; }
-    .nav .menu > li a {
-      border: 1px solid #ed0000;
-      padding: 0 10px;
+  .nav .menu {
+    position: absolute;
+    text-align: right;
+    right: 0;
+    width: 30%;
+    height: 50px; }
+    .nav .menu > li {
+      margin: 9px 2%;
+      line-height: 30px;
+      float: right;
+      text-align: center;
+      vertical-align: middle;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
       -o-border-radius: 3px;
-      border-radius: 3px;
-      display: inline-block; }
-      .nav .menu > li a:hover {
-        background: #ed0000;
-        color: #fff;
-        text-decoration: none; }
-    .nav .menu > li.wel-user a {
-      border: none; }
-      .nav .menu > li.wel-user a:hover {
-        text-decoration: underline;
-        color: #ed0000;
-        background: #fff; }
+      border-radius: 3px; }
+      .nav .menu > li a {
+        border: 1px solid #ed0000;
+        padding: 0 10px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        border-radius: 3px;
+        display: inline-block; }
+        .nav .menu > li a:hover {
+          background: #ed0000;
+          color: #fff;
+          text-decoration: none; }
+      .nav .menu > li.wel-user a {
+        border: 1px solid #fff; }
+        .nav .menu > li.wel-user a:hover {
+          text-decoration: underline;
+          color: #ed0000;
+          background: #fff; }
 
 footer {
   padding: 30px;
@@ -663,14 +671,14 @@ footer {
     border-radius: 3px;
     margin: 10px 0; }
   #new-topic #new-topic-title {
-    width: 100%;
+    width: 96%;
     height: 40px;
-    padding: 0 15px;
+    padding: 0 2%;
     font-weight: bold; }
   #new-topic #new-topic-content {
-    width: 100%;
+    width: 96%;
     height: 300px;
-    padding: 15px; }
+    padding: 2%; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
@@ -680,13 +688,12 @@ footer {
     border: none;
     padding: 0; }
 
-@media screen and (max-device-width: 479px) {
-  .nav .search-form {
-    margin-left: 10px; }
-    .nav .search-form button {
-      margin-left: 0; }
-  .nav .menu > li {
-    margin: 10px 3px; }
-
+@media screen and (min-width: 767px) and (max-width: 970px) {
+  .main .main-wrapper {
+    width: 767px; } }
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .main .main-wrapper {
+    width: 480px; } }
+@media screen and (max-width: 479px) {
   .main .main-wrapper {
     width: 320px; } }
