--- a/public/sass/responsive.scss
+++ b/public/sass/responsive.scss
@@ -1,26 +1,22 @@
-//pad
-@media screen and (min-device-width: 480px) and (max-device-width: 768px) {
-
-    
-}
-//phone
-@media screen and (max-device-width: 479px){
-
-    .nav{
-        .search-form{
-            margin-left:10px;
-            .search{
-            }
-            button{
-                margin-left:0; 
-            }
-        }
-        .menu{
-            >li{
-                margin:10px 3px;
-            }
+//v pad
+@media screen and (min-width: 767px) and (max-width:970px) {
+  .main{ 
+        .main-wrapper{
+            width:767px;
         }
     }
+}
+//h pad
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .main{ 
+        .main-wrapper{
+            width:480px; 
+        }
+    }
+}
+//phone
+@media screen and (max-width: 479px){
+
 
     .main{ 
         .main-wrapper{
