--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -131,15 +131,15 @@
         margin:10px 0;
     }
     #new-topic-title{
-        width:100%;
+        width:96%;
         height:40px;
-        padding:0 15px;
+        padding:0 2%;
         font-weight:bold;
     }
     #new-topic-content{
-        width:100%;
+        width:96%;
         height:300px;
-        padding:15px;
+        padding:2%;
     }
     button[type=submit]{
         width:100px; 
