--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -15,12 +15,15 @@
     margin-left: auto;
     margin-right: auto;
     height: 50px;
-    padding: 0 10px; }
+    padding: 0 2%;
+    position: relative; }
+    .nav .nav-container .logo {
+      float: left; }
   .nav a {
     color: #ed0000; }
   .nav .search-form {
     width: 50%;
-    margin-left: 50px; }
+    margin-left: 2%; }
     .nav .search-form .search {
       display: inline-block;
       width: 60%;
@@ -33,7 +36,7 @@
     .nav .search-form button {
       display: inline-block;
       vertical-align: middle;
-      margin-left: 20px;
+      margin-left: 2%;
       height: 30px;
       line-height: 30px;
       padding: 0 10px;
@@ -45,37 +48,42 @@
       -ms-border-radius: 3px;
       -o-border-radius: 3px;
       border-radius: 3px; }
-  .nav .menu > li {
-    height: 30px;
-    margin: 10px;
-    line-height: 30px;
-    float: left;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px; }
-    .nav .menu > li a {
-      border: 1px solid #ed0000;
-      padding: 0 10px;
+  .nav .menu {
+    position: absolute;
+    text-align: right;
+    right: 0;
+    width: 30%;
+    height: 50px; }
+    .nav .menu > li {
+      margin: 9px 2%;
+      line-height: 30px;
+      float: right;
+      text-align: center;
+      vertical-align: middle;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
       -o-border-radius: 3px;
-      border-radius: 3px;
-      display: inline-block; }
-      .nav .menu > li a:hover {
-        background: #ed0000;
-        color: #fff;
-        text-decoration: none; }
-    .nav .menu > li.wel-user a {
-      border: none; }
-      .nav .menu > li.wel-user a:hover {
-        text-decoration: underline;
-        color: #ed0000;
-        background: #fff; }
+      border-radius: 3px; }
+      .nav .menu > li a {
+        border: 1px solid #ed0000;
+        padding: 0 10px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        border-radius: 3px;
+        display: inline-block; }
+        .nav .menu > li a:hover {
+          background: #ed0000;
+          color: #fff;
+          text-decoration: none; }
+      .nav .menu > li.wel-user a {
+        border: 1px solid #fff; }
+        .nav .menu > li.wel-user a:hover {
+          text-decoration: underline;
+          color: #ed0000;
+          background: #fff; }
 
 footer {
   padding: 30px;
