--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,8 @@
   padding: 20px 0; }
   .main .main-wrapper {
     margin: 0 auto;
-    width: 970px; }
+    width: 970px;
+    padding: 1%; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
       display: table; }
@@ -12,12 +13,12 @@
 
 .new-post-btn {
   display: inline-block;
-  float: right;
-  width: 60px;
   height: 40px;
   line-height: 40px;
-  color: #ed0000;
-  padding: 0 10px;
+  background: #ed0000;
+  color: #fff;
+  padding: 0 15px;
+  border: none;
   text-decoration: none;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -67,6 +68,47 @@
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
     border-radius: 3px; }
+
+.reply-list .reply-item {
+  width: 100%; }
+  .reply-list .reply-item:before, .reply-list .reply-item:after {
+    content: "";
+    display: table; }
+  .reply-list .reply-item:after {
+    clear: both; }
+.reply-list .reply-wrapper {
+  margin: 20px 0;
+  position: relative; }
+.reply-list .user-avatar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  margin-right: 1%; }
+  .reply-list .user-avatar img {
+    width: 48px;
+    height: 48px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px; }
+.reply-list .reply-main {
+  padding: 0 0 0 60px;
+  margin: 10px 0; }
+  .reply-list .reply-main:before, .reply-list .reply-main:after {
+    content: "";
+    display: table; }
+  .reply-list .reply-main:after {
+    clear: both; }
+  .reply-list .reply-main .uname {
+    font-size: 16px;
+    vertical-align: middle; }
+  .reply-list .reply-main .date {
+    margin-left: 2%;
+    vertical-align: middle;
+    color: #ccc; }
 
 .reg-form, .login-form {
   width: 60%;
