--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -15,6 +15,6 @@ $link-hover-color:red;
 //form
 $input-color-placeholder:#ddd;
 
-$global-color:#ED0000;
+$global-color:#E60000;
 
 $border-color:#f0f0f0;
