--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -464,7 +464,7 @@ textarea {
     .nav .nav-container .logo {
       float: left; }
   .nav a {
-    color: #ed0000; }
+    color: #e60000; }
   .nav .search-form {
     width: 50%;
     margin-left: 2%; }
@@ -486,7 +486,7 @@ textarea {
       padding: 0 10px;
       color: #fff;
       border: none;
-      background: #ed0000;
+      background: #e60000;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       -ms-border-radius: 3px;
@@ -510,7 +510,7 @@ textarea {
       -o-border-radius: 3px;
       border-radius: 3px; }
       .nav .menu > li a {
-        border: 1px solid #ed0000;
+        border: 1px solid #e60000;
         padding: 0 10px;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
@@ -519,38 +519,38 @@ textarea {
         border-radius: 3px;
         display: inline-block; }
         .nav .menu > li a:hover {
-          background: #ed0000;
+          background: #e60000;
           color: #fff;
           text-decoration: none; }
       .nav .menu > li.wel-user a {
         border: 1px solid #fff; }
         .nav .menu > li.wel-user a:hover {
           text-decoration: underline;
-          color: #ed0000;
+          color: #e60000;
           background: #fff; }
-
-footer {
-  padding: 30px;
-  border-top: 1px dashed #ddd; }
 
 .main {
   width: 100%;
   padding: 20px 0; }
   .main .main-wrapper {
     margin: 0 auto;
-    width: 970px;
+    width: 1000px;
     padding: 1%; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
       display: table; }
     .main .main-wrapper:after {
       clear: both; }
+    .main .main-wrapper footer {
+      margin-top: 20px;
+      padding-top: 20px;
+      border-top: 1px dashed #ccc; }
 
 .new-post-btn {
   display: inline-block;
   height: 40px;
   line-height: 40px;
-  background: #ed0000;
+  background: #e60000;
   color: #fff;
   padding: 0 15px;
   border: none;
@@ -562,7 +562,7 @@ footer {
   border-radius: 3px; }
   .new-post-btn:hover {
     text-decoration: none;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none; }
 
@@ -583,8 +583,8 @@ footer {
   font-size: 14px; }
 
 #replyContent {
-  width: 100%;
-  height: 300px;
+  width: 97%;
+  height: 100px;
   border: 1px solid #ddd;
   padding: 1%;
   font-size: 14px; }
@@ -595,7 +595,7 @@ footer {
     width: 100px;
     height: 40px;
     margin-top: 20px;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none;
     -webkit-border-radius: 3px;
@@ -668,7 +668,7 @@ footer {
   .reg-form label, .login-form label {
     width: 50px; }
   .reg-form span.tips, .login-form span.tips {
-    color: #ed0000;
+    color: #e60000;
     margin-left: 10px;
     display: none; }
   .reg-form .act button, .login-form .act button {
@@ -677,7 +677,7 @@ footer {
     padding: 0 30px;
     border: none;
     color: #fff;
-    background: #ed0000;
+    background: #e60000;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
@@ -713,19 +713,19 @@ footer {
     border-radius: 3px;
     margin: 10px 0; }
   #new-topic #new-topic-title {
-    width: 96%;
+    width: 95%;
     height: 40px;
     padding: 0 2%;
     font-weight: bold; }
   #new-topic #new-topic-content {
-    width: 96%;
+    width: 95%;
     height: 300px;
     padding: 2%; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
     line-height: 40px;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none;
     padding: 0; }
