--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,19 +3,23 @@
   padding: 20px 0; }
   .main .main-wrapper {
     margin: 0 auto;
-    width: 970px;
+    width: 1000px;
     padding: 1%; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
       display: table; }
     .main .main-wrapper:after {
       clear: both; }
+    .main .main-wrapper footer {
+      margin-top: 20px;
+      padding-top: 20px;
+      border-top: 1px dashed #ccc; }
 
 .new-post-btn {
   display: inline-block;
   height: 40px;
   line-height: 40px;
-  background: #ed0000;
+  background: #e60000;
   color: #fff;
   padding: 0 15px;
   border: none;
@@ -27,7 +31,7 @@
   border-radius: 3px; }
   .new-post-btn:hover {
     text-decoration: none;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none; }
 
@@ -48,8 +52,8 @@
   font-size: 14px; }
 
 #replyContent {
-  width: 100%;
-  height: 300px;
+  width: 97%;
+  height: 100px;
   border: 1px solid #ddd;
   padding: 1%;
   font-size: 14px; }
@@ -60,7 +64,7 @@
     width: 100px;
     height: 40px;
     margin-top: 20px;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none;
     -webkit-border-radius: 3px;
@@ -133,7 +137,7 @@
   .reg-form label, .login-form label {
     width: 50px; }
   .reg-form span.tips, .login-form span.tips {
-    color: #ed0000;
+    color: #e60000;
     margin-left: 10px;
     display: none; }
   .reg-form .act button, .login-form .act button {
@@ -142,7 +146,7 @@
     padding: 0 30px;
     border: none;
     color: #fff;
-    background: #ed0000;
+    background: #e60000;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
@@ -178,19 +182,19 @@
     border-radius: 3px;
     margin: 10px 0; }
   #new-topic #new-topic-title {
-    width: 96%;
+    width: 95%;
     height: 40px;
     padding: 0 2%;
     font-weight: bold; }
   #new-topic #new-topic-content {
-    width: 96%;
+    width: 95%;
     height: 300px;
     padding: 2%; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
     line-height: 40px;
-    background: #ed0000;
+    background: #e60000;
     color: #fff;
     border: none;
     padding: 0; }
