--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,8 +7,13 @@
     .main-wrapper{
         @include clearfix();
         margin:0 auto;
-        width:970px;
+        width:1000px;
         padding:1%;
+        footer{
+            margin-top:20px;
+            padding-top:20px;
+            border-top:1px dashed #ccc;
+        }
     }
 }
 //index
@@ -48,8 +53,8 @@
     font-size:14px;
 }
 #replyContent{
-    width:100%;
-    height:300px;
+    width:97%;
+    height:100px;
     border:1px solid #ddd;
     padding:1%;
     font-size:14px;
@@ -168,13 +173,13 @@
         margin:10px 0;
     }
     #new-topic-title{
-        width:96%;
+        width:95%;
         height:40px;
         padding:0 2%;
         font-weight:bold;
     }
     #new-topic-content{
-        width:96%;
+        width:95%;
         height:300px;
         padding:2%;
     }
