--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -13,7 +13,8 @@ body {
   margin: 0;
   padding: 0;
   background: white;
-  width: 100%; }
+  width: 100%;
+  color: #272727; }
 
 a {
   color: blue;
@@ -587,7 +588,8 @@ textarea {
   height: 100px;
   border: 1px solid #ddd;
   padding: 1%;
-  font-size: 14px; }
+  font-size: 14px;
+  resize: vertical; }
 
 .reply-form {
   margin-top: 20px; }
@@ -720,7 +722,8 @@ textarea {
   #new-topic #new-topic-content {
     width: 95%;
     height: 300px;
-    padding: 2%; }
+    padding: 2%;
+    resize: vertical; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
