--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -5,7 +5,8 @@ body {
   margin: 0;
   padding: 0;
   background: white;
-  width: 100%; }
+  width: 100%;
+  color: #272727; }
 
 a {
   color: blue;
