--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,8 @@
   height: 100px;
   border: 1px solid #ddd;
   padding: 1%;
-  font-size: 14px; }
+  font-size: 14px;
+  resize: vertical; }
 
 .reply-form {
   margin-top: 20px; }
@@ -189,7 +190,8 @@
   #new-topic #new-topic-content {
     width: 95%;
     height: 300px;
-    padding: 2%; }
+    padding: 2%;
+    resize: vertical; }
   #new-topic button[type=submit] {
     width: 100px;
     height: 40px;
