--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -201,3 +201,7 @@
    background:#fff;
    display:none;
 }
+//loading
+.more{
+    background:url(../img/loading.gif) no-repeat center center; 
+}
