--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -447,7 +447,8 @@ textarea {
   width: 100%;
   height: 50px;
   line-height: 50px;
-  background: #fff;
+  color: #fff;
+  background: #333;
   -webkit-box-shadow: 0px 0px 10px #999999;
   box-shadow: 0px 0px 10px #999999; }
   .nav:before, .nav:after {
@@ -500,8 +501,6 @@ textarea {
     width: 40%;
     height: 50px; }
     .nav .menu > li {
-      margin: 9px 2%;
-      line-height: 30px;
       float: right;
       text-align: center;
       vertical-align: middle;
@@ -511,24 +510,17 @@ textarea {
       -o-border-radius: 3px;
       border-radius: 3px; }
       .nav .menu > li a {
-        border: 1px solid #e60000;
+        border: none;
         padding: 0 10px;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         -ms-border-radius: 3px;
         -o-border-radius: 3px;
         border-radius: 3px;
-        display: inline-block; }
+        display: inline-block;
+        color: #999; }
         .nav .menu > li a:hover {
-          background: #e60000;
-          color: #fff;
-          text-decoration: none; }
-      .nav .menu > li.wel-user a {
-        border: 1px solid #fff; }
-        .nav .menu > li.wel-user a:hover {
-          text-decoration: underline;
-          color: #e60000;
-          background: #fff; }
+          color: #ddd; }
 
 .main {
   width: 100%;
@@ -737,6 +729,9 @@ textarea {
   width: 50%;
   background: #fff;
   display: none; }
+
+.more {
+  background: url(../img/loading.gif) no-repeat center center; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
