--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 50px;
   line-height: 50px;
-  background: #fff;
+  color: #fff;
+  background: #333;
   -webkit-box-shadow: 0px 0px 10px #999999;
   box-shadow: 0px 0px 10px #999999; }
   .nav:before, .nav:after {
@@ -55,8 +56,6 @@
     width: 40%;
     height: 50px; }
     .nav .menu > li {
-      margin: 9px 2%;
-      line-height: 30px;
       float: right;
       text-align: center;
       vertical-align: middle;
@@ -66,21 +65,14 @@
       -o-border-radius: 3px;
       border-radius: 3px; }
       .nav .menu > li a {
-        border: 1px solid #e60000;
+        border: none;
         padding: 0 10px;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         -ms-border-radius: 3px;
         -o-border-radius: 3px;
         border-radius: 3px;
-        display: inline-block; }
+        display: inline-block;
+        color: #999; }
         .nav .menu > li a:hover {
-          background: #e60000;
-          color: #fff;
-          text-decoration: none; }
-      .nav .menu > li.wel-user a {
-        border: 1px solid #fff; }
-        .nav .menu > li.wel-user a:hover {
-          text-decoration: underline;
-          color: #e60000;
-          background: #fff; }
+          color: #ddd; }
