--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -524,7 +524,8 @@ textarea {
 
 .main {
   width: 100%;
-  padding: 20px 0; }
+  padding: 20px 0;
+  background: #f9f9f9; }
   .main .main-wrapper {
     margin: 0 auto;
     width: 1000px;
