--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 .main {
   width: 100%;
-  padding: 20px 0; }
+  padding: 20px 0;
+  background: #f9f9f9; }
   .main .main-wrapper {
     margin: 0 auto;
     width: 1000px;
