--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -4,6 +4,7 @@
 .main{
     width:100%;
     padding:20px 0;
+    background:#f9f9f9;
     .main-wrapper{
         @include clearfix();
         margin:0 auto;
