--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,8 @@
   .main .main-wrapper {
     margin: 0 auto;
     width: 1000px;
-    padding: 1%; }
+    padding: 1%;
+    color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
       display: table; }
@@ -43,7 +44,9 @@
     border-bottom: 1px solid #e8e8e8;
     position: relative;
     width: 100%;
-    padding: 30px 0px; }
+    padding: 1% 0px; }
+    .topic-list li h2 a {
+      color: #111; }
 
 .topic-tags {
   color: #666; }
@@ -208,4 +211,20 @@
   display: none; }
 
 .more {
+  height: 32px;
+  padding: 0;
+  margin: 0;
   background: url(../img/loading.gif) no-repeat center center; }
+
+.s_more {
+  height: 20px;
+  padding: 0;
+  margin: 0;
+  background: url(../img/s_loading.gif) no-repeat center center; }
+
+i.loading {
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  background: url(../img/s_loading.gif) no-repeat center center; }
